fix(shortcuts): improve icon alignment, make icons smaller, align text with icons, move arrows right, make delete red

--- a/assets/app/main.css
+++ b/assets/app/main.css
@@ -523,11 +523,19 @@ img{
     position: relative;
     margin-top: 30px;
     display: grid;
-    grid-template-columns: 50% 50%;
+    grid-template-columns: max-content 1fr max-content;
+    align-items: center;
     height: 90px;
     width: 100%;
     background-color: var(--secondary);
     border-radius: 20px;
+    padding: 0 20px;
+}
+
+.action_image{
+    width: 24px;
+    height: 24px;
+    margin-right: 15px;
 }
 
 .top_action_grid{
@@ -559,9 +567,14 @@ img{
     text-align: left;
     height: max-content;
     width: max-content;
-    margin-left: 10%;
+    margin-left: 0;
     font-weight: 500;
     font-size: 22px;
+}
+
+.action_arrow{
+    width: 25px;
+    margin-left: auto;
 }
 
 .action_box_connected{
@@ -587,6 +600,14 @@ img{
 
 .action_box_connected .action_arrow{
     margin-right: 0;
+}
+
+.delete_action .action_box_text{
+    color: #ff6b6b;
+}
+
+.delete_action .action_image{
+    filter: brightness(0) saturate(100%) invert(65%) sepia(85%) saturate(1500%) hue-rotate(340deg) brightness(120%) contrast(100%);
 }
 
 .frame_qr{
